# sermon-ai-audio-processor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLEANUP_PHASE1_SUMMARY.md  CONTAINERIZATION.md  CONTAINERIZATION_README.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  ENHANCED_LLM_PROVIDER_SUMMARY.md  LOCAL_TESTING_REQUIREMENTS.md  README.md  check_jobs.py  config.example.yaml  config.yaml  copilot-plan.md  demo_enhanced_providers.py  demo_enhanced_workflow.py  docker-build.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-start-dev.sh  docker-start-prod.sh  examples_config.yaml  pyproject.toml  requirements.txt  sermon_updater.py  server.sh  setup-docker.sh  start_server.bat  start_streamlit.ps1  streamlit_app.py  test-log.md  test_analytics_features.py  test_config.db  test_config_fix.py  test_config_pattern.py  test_docker_setup.py  (+4 more)
.githooks/: pre-commit
.github/: copilot-instructions.md
Tests/: production_readiness_implementer.py
analytics_vector_db/: chroma.sqlite3
config/: README.md  config.example.yaml
copilot-plans/: IMPLEMENTATION_SUMMARY.md  README.md  code-refactoring-plan.md  containerization-plan.md  documentation-update-plan.md  master-plan.md  mock-data-removal-plan.md  phase4-issue-documentation.md  repository-cleanup-plan.md  sql-config-migration-plan.md  ui-audio-editing-plan.md
docker/: README.md  start_production.sh  wait_for_services.py
docs/: AI_MODELS_INSTALLATION.md  ANALYTICS.md  CODE_REFACTORING_IMPLEMENTATION.md  COMPREHENSIVE_SYSTEM_IMPLEMENTATION.md  EMBEDDING_PROVIDERS.md  ENHANCED_AUDIO_EDITING_GUIDE.md  ENHANCEMENT_MODEL_TESTING_RESULTS.md  GPU_INSTALLATION.md  IMPORT_RESOLUTION_GUIDE.md  INSTALLATION_GUIDE.md  LINUX_INSTALLATION.md  LLM_Configuration_Guide.md  NEW_SERMON_WORKFLOW.md  PERFORMANCE_MONITORING.md  PRODUCTION_DEPLOYMENT_GUIDE.md  RAG_SYSTEM.md  README.md  SECURITY_SETUP_GUIDE.md  SQL_CONFIGURATION_MIGRATION.md  UV_SETUP.md
examples/: demo_enhanced_providers.py  demo_metadata_api.py  test_ui_metadata_integration.py
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml  service.yaml
requirements/: README.md  requirements-cpu.txt  requirements-dev.txt  requirements-gpu-full.txt  requirements-gpu-minimal.txt  requirements-gpu.txt  requirements-linux.txt  requirements-models-all.txt  requirements-rocm.txt  requirements.txt
scripts/: README.md  fix_series.py  migrate_sermon_dirs.py
sql/: create_config_schema.sql
src/: audio_processing.py  clear_enhancer.py  description_validator.py  enhanced_audio_processor.py  llm_manager.py  qa_normalizer.py  search_engine.py  secure_config.py  sermon_paths.py  validate_descriptions.py
tests/: debug_auto_validation.py  run_real_validation.py  stop_validation_jobs.py  test_analytics_validation.py  test_api_caching.py  test_audio_editing_components.py  test_audio_packages.py  test_complete_integration.py  test_comprehensive_qa_system.py  test_config_backup.py  test_cost_tracking.py  test_cost_tracking_simple.py  test_database_update_debug.py  test_debug_analytics_data.py  test_embedding_system.py  test_enhanced_audio_processing.py  test_enhanced_import.py  test_enhanced_workflow_integration.py  test_final_integration.py  test_fix_fts_table.py  test_force_reimport.py  test_job_queue_integration.py  test_job_queue_ui.py  test_new_sermon.py  test_playwright_analytics.py  test_qa_normalization.py  test_sermonaudio_api.py  test_simple_reimport.py  test_sql_config_migration.py  test_ui_functionality.py  test_ui_improvements.py  test_ui_job_verification.py  test_ui_metadata_integration.py  test_ui_structure.py  test_ui_validation.py
tools/: README.md  config_migration_tool.py  master_plan_runner.py  security_scanner.py  validate_security.py
ui/: database.py  (+21 more)
(+132 files in other folders)
